<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_chats_add"
        android:enabled="true"
        android
        :icon="@drawable/ic_add_black_24dp"
        android:title="@string/add_messages"
        app:showAsAction= "always" />
    <item
        android:id="@+id/action_chats_search"
        android:enabled="true"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search"
        app:showAsAction= "always" />
    <item
        android:id="@+id/action_chats_edit"
        android:enabled="true"
        android:title="@string/edit_messages"
        app:showAsAction= "never" />
    <item
        android:id="@+id/action_chats_sort"
        android:enabled="true"
        android:title="@string/sort_chats"
        app:showAsAction= "never" />
    <item
        android:id="@+id/action_chats_mark_read"
        android:enabled="true"
        android:title="@string/mark_read"
        app:showAsAction= "never" />
</menu>