<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_friends"
        android:enabled="true"
        android:icon="@drawable/ic_people_black_24dp"
        android:title="@string/friends"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_chats"
        android:enabled="true"
        android:icon="@drawable/ic_chat_black_24dp"
        android:title="@string/chats"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_timeline"
        android:enabled="true"
        android:icon="@drawable/ic_view_headline_black_24dp"
        android:title="@string/timeline"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_news"
        android:enabled="true"
        android:icon="@drawable/ic_book_black_24dp"
        android:title="@string/news"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_more"
        android:enabled="true"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/more"
        app:showAsAction="ifRoom" />
</menu>