<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_friends_add"
        android:enabled="true"
        android:icon="@drawable/ic_person_add_black_24dp"
        android:title="@string/add_friends"
        app:showAsAction= "always" />
    <item
        android:id="@+id/action_friends_search"
        android:enabled="true"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search"
        app:showAsAction= "always" />
    <item
        android:id="@+id/action_friends_setting"
        android:enabled="true"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/settings"
        app:showAsAction= "always" />
</menu>